# libzfs-rs

./: Cargo.toml  README.md
libzfs-sys/: Cargo.toml  build.rs  wrapper.h
libzfs-sys/src/: lib.rs
src/: lib.rs  nvlist.rs  zfs.rs
