[package]
name = "libzfs-rs"
version = "0.1.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzfs-sys = { path = "./libzfs-sys"}
[workspace]
members = [
	"libzfs-sys",
	]
